AC_INIT([libroute_configurer], [0.1.0], [agusvillafane@yahoo.com.ar])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_CONFIG_MACRO_DIR([m4])
AM_PROG_AR
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
LT_INIT([dlopen shared])
AC_CONFIG_FILES([
 Makefile
])
#AC_CHECK_HEADERS(jni.h,[],[AC_ERROR([jni.h is required])])
AC_OUTPUT
